# NYC-Taxi-Pipeline

./: .gitignore  pyproject.toml
lambda/: Dockerfile  handler.py
lambda/src/: decreypt.py  decrypt.py  s3_utils.py
utils/cryptography/: secure.py
utils/s3/: upload.py
utils/test/: test_secure.py
