[project]
name = "NYC-Taxi-Pipeline"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "black>=25.1.0",
    "cryptography>=45.0.6",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
